# orchestra-main

./: .ai-context-index.md  .ai_token_access  .bashrc.orchestra  .coverage  .cursorignore  .cursorrules  .dockerignore  .env  .env.development  .env.example  .env.production  .env.template  .envrc  .envrc.example  .factory-ai-config  .flake8  .gemini-code-assist.yaml  .gitattributes  .gitignore  .gitignore.backup  .gitmessage  .mcp-clean.json  .mcp-tier2.json  .mcp.json  .migration_state.json  .npmrc  .pre-commit-config.yaml  .python-version-lock  .refactoring_state.json  .roomodes  .roomodes.backup  .roomodes.optimized  .roomodes.protected  .rsync-exclude  .terraformrc  .tflint.hcl  .tool-versions  .trivyignore  .vercelignore  .versions.yaml  (+2284 more)
gcp_migration/: .env.template  Dockerfile  ERROR_RESOLUTION_README.md  GCP_GITHUB_INTEGRATION.md  GCP_MIGRATION_DEPLOYMENT_GUIDE.md  GCP_MIGRATION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_EXECUTION_PLAN.md  MIGRATION_MONITORING_README.md  MIGRATION_STATUS_REPORT.md  MIGRATION_STRATEGY.md  QUICKSTART.md  QUICK_START.md  README.md  REFACTORING_GUIDE.md  __init__.py  __main__.py  apply_org_policies_github_action.yml  benchmark_config.yaml  circuit_breaker.py  circuit_breaker_enhanced.py  circuit_breaker_unified.py  complete_migration.sh  create_service_account_key.sh  deploy_gcp_migration.sh  deploy_hybrid_config.sh  deploy_minimal_service.py  environment_sync.py  error_handling.py  execute_migration.py  execute_migration_fixed.sh  execute_migration_now.sh  execute_non_interactive.sh  execute_optimized_migration.py  execute_unified_migration.py  fix_cloud_run_access.sh  fix_organization_policies.sh  fix_terraform_duplicate_backend.sh  fix_vertex_ai_auth.py  fixed_requirements.txt  (+38 more)
gcp_migration/application/: __init__.py  api.py  benchmark.py  cli.py  migration_service.py  workflow.py
gcp_migration/cli/: __init__.py  app.py
gcp_migration/config/: settings.py
gcp_migration/core/: errors.py
gcp_migration/docs/: api_reference.md  error_handling.md  index.md  installation.md  quick_start.md  security_best_practices.md
gcp_migration/domain/: __init__.py  exceptions.py  exceptions_fixed.py  interfaces.py  interfaces_ext.py  models.py  protocols.py
gcp_migration/infrastructure/: __init__.py  adapters.py  batch.py  cache.py  connection.py  extended_gcp_service.py  gcp_service.py  gcp_service_fixed.py  gemini_config_service.py  github_service.py  resilience.py  secret_manager_service.py  service_container.py  service_factory.py
gcp_migration/migration_logs/: migration_final_report.md  migration_summary.md
gcp_migration/reports/: migration_status_20250512.md
gcp_migration/templates/: deploy-cloud-run.yml  incident_report_template.md
gcp_migration/terraform/: main.tf
gcp_migration/tests/: conftest.py
gcp_migration/utils/: di.py  error_handling.py  error_handling_fixed.py  errors.py  logging.py
mcp_server/: AUTOMATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.optimized  MCP_SERVER_GUIDE.md  MCP_SERVER_IMPLEMENTATION_SUMMARY.md  MCP_SERVER_SETUP.md  MCP_SERVER_STARTUP_FIX.md  README.md  __init__.py  ai_agent_discovery.py  async_server.py  codex_integration.py  config.json.example  demo_memory_sync.py  deploy_mcp_server.sh  exceptions.py  gateway.py  health_check.py  main.py  memory_sync_engine.py  optimized_ide_integration.py  optimized_memory_sync.py  performance_wrapper.py  pyproject.toml  quick_deploy.sh  run_mcp_server.py  run_optimized_server.py  server.py  server_registry.json  start_mcp.py  test_orchestrator.py
mcp_server/.draft/: MCP_MEMORY_DEPLOYMENT_REVIEW.md  MCP_MEMORY_IMPLEMENTATION_PLAN.md  MCP_MEMORY_STRUCTURE_REVIEW.md  MCP_MEMORY_STRUCTURE_SUMMARY.md
mcp_server/adapters/: README.md  __init__.py  architect_adapter.py  claude_adapter.py  code_adapter.py  codex_adapter.py  config.py  copilot_adapter.py  cursor_adapter.py  debug_adapter.py  deepseek_adapter.py  example_integration.py  factory_mcp_adapter.py  gemini_adapter.py  grok_adapter.py  jules_google_adapter.py  knowledge_adapter.py  openai_adapter.py  openrouter_adapter.py  portkey_adapter.py  reliability_adapter.py  roo_adapter.py  test_adapters.py
mcp_server/base/: enhanced_server_base.py
mcp_server/config/: __init__.py  dragonfly_config.py  loader.py  mcp_gcp_config.json  mcp_gcp_config.yaml  memory_config.py  memory_config_DEPRECATED.py  models.py  performance.yaml  weaviate_mcp_config.py
mcp_server/deploy/: README.md  deploy_optimized.sh
mcp_server/integration/: unified_auth_discovery.py
mcp_server/interfaces/: memory_manager.py  storage.py  tool_adapter.py
mcp_server/managers/: agent_mode_manager.py  performance_memory_manager.py  standard_memory_manager.py
mcp_server/mcp_server/: async_server.py  demo_memory_sync.py  exceptions.py  health_check.py  ide_integration_test.py  main.py  memory_sync_engine.py  optimized_ide_integration.py  optimized_memory_sync.py  run_optimized_server.py  server.py
mcp_server/memory/: __init__.py  base.py  dragonfly_cache.py  firestore_episodic.py  langchain_memory.py  qdrant_semantic.py  test_dragonfly_connection.py
mcp_server/models/: __init__.py  agent_mode.py  memory.py
mcp_server/monitoring/: health_dashboard.py  health_dashboard_enhanced.py  monitoring.yaml
mcp_server/roo/: __init__.py  memory_hooks.py  modes.py  modes.py.backup  orchestra_integration.py  rules.py  transitions.py
orchestra_api/: .pre-commit-config.yaml  Dockerfile  README.md  bootstrap.sh  main.py  pyproject.toml  requirements.txt
orchestra_system/: README.md  __init__.py  api.py  config_manager.py  conflict_resolver.py  mcp_server_management.py  migrate.py  pyproject.toml  resource_registry.py  setup.py
wif_implementation/: README.md  __init__.py  cicd_manager.py  client.py  config.py  config_models.py  csrf_loader.py  csrf_protection.py  csrf_protection_dev.py  db_schema.py  enhanced_template_manager.py  error_handler.py  manager_factory.py  migration_manager.py  models.py  pyproject.toml  requirements.txt  setup_wif_cli.py  template_manager.py  training_manager.py  types.py  vulnerability_manager.py
(+4119 files in other folders)
