[tool.poetry]
name = "orchestra-main"
version = "0.1.0"
description = "AI Orchestrator and Modular Agent Framework for GCP"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^4.2.0"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["agent", "core", "mcp_server", "orchestra", "services"]
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
