[tool.poetry]
name = "orchestra-main"
version = "0.1.0"
description = "AI Orchestrator and Modular Agent Framework for GCP"
authors = ["AI Cherry Team <security@ai-cherry.com>"]
packages = [{include = "orchestra_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.0"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["orchestra_core"]
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
