[tool.poetry]
name = "orchestra-api"
version = "0.1.0"
description = "Async, high-performance API for AI/data orchestration on GCP"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "orchestra_api" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.29" }
pydantic = "^2.7"
google-cloud-firestore = "^2.16"
google-cloud-pubsub = "^2.21"
google-cloud-secret-manager = "^2.18"
redis = "^5.0"
qdrant-client = "^1.7"
httpx = "^0.27"
loguru = "^0.7"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
mypy = "^1.10"
flake8 = "^7.0"
black = "^24.4"
pre-commit = "^3.7"
locust = "^2.25"
types-redis = "^4.6"
types-python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = 3.10
strict = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
exclude = ".venv,venv,.git,__pycache__,build,dist"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]