[tool.poetry]
name = "wif-implementation"
version = "0.1.0"
description = "Workload Identity Federation implementation for GitHub and GCP"
authors = ["Lynn Musil <scoobyjava@cherry-ai.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
jinja2 = "^3.1.0"
pyyaml = "^6.0.0"
google-api-python-client = "^2.70.0"
google-auth = "^2.16.0"
google-cloud-iam = "^2.12.0"
typing-extensions = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.1.0"
mypy = "^1.5.1"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wif-setup = "wif_implementation.setup_wif_cli:main"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "B", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["google.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"