[project]
name = "admin-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Lynn Musil",email = "musillynn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "google-cloud-aiplatform (>=1.92.0,<2.0.0)",
    "google-cloud-firestore (>=2.20.2,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "redis (>=5.0.3,<6.0.0)",
    "psutil (>=5.9.8,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
