[tool.poetry]
name = "admin-api"
version = "0.1.0"
description = "Admin API service for AI Orchestra"
authors = ["Lynn Musil <scoobyjava@cherry-ai.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
google-cloud-aiplatform = ">=1.92.0,<2.0.0"
google-cloud-firestore = ">=2.20.2,<3.0.0"
sqlalchemy = ">=2.0.40,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pydantic = ">=2.11.4,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
backoff = ">=2.2.1,<3.0.0"
redis = ">=5.0.3,<6.0.0"
psutil = ">=5.9.8,<6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<8.0.0"
black = ">=23.3.0,<24.0.0"
isort = ">=5.12.0,<6.0.0"
mypy = ">=1.3.0,<2.0.0"
ruff = ">=0.0.262,<0.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
